Deal with Hudson warnings for Autotools ui.